Implemented task R-043-05-original-media-api
